--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -3,7 +3,7 @@
 }
 .wrapper {
     display: flex;
-    position: fixed;
+    position: relative;
     min-height: auto;
     min-width: 100%;
     margin-top: 50px;
